[package]
name = "dirble"
version = "1.4.2"
authors = ["Izzy Whistlecroft <izzy.whistlecroft@nccgroup.com>"]
edition = "2024"
build = "build.rs"
license = "GPL-3-or-later"
description = "Fast directory scanning and scraping tool"

[dependencies]
curl = "0.4.19"
percent-encoding = "2.1"
clap = "2.32"
select = "0.6"
chardet = "0.2.4"
encoding = "0.2.33"
atty = "0.2.11"
colored = "3.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0"
simple_xml_serialize = "0.3.0"
simple_xml_serialize_macro = "0.3.0"
log = "0.4.6"
simplelog = "0.12.2"
ctrlc = "3.0"
url = "2.1"
time = "0.3.39"

[build-dependencies]
vergen-gix = { version = "1.0.6", features = ["build", "si"] }

[features]
release_version_string = []
